# nf-engine

./: .gitignore  CMakeLists.txt  README.md
mgmtd/: main.cpp  (+1 more)
serverd/: CMakeLists.txt
serverd/algorithm/: ByteRingBuffer.cpp  LockQueue.h  MpscQueue.h  SpscQueue.h
serverd/core/: Core.cpp  Core.h  CoreControl.cpp  CoreControl.h  CoreControlTypes.h
serverd/egress/: TxRouter.cpp
serverd/execution/: Event.h
serverd/execution/lobby/: LobbyEvent.cpp  LobbyEvent.h  LobbyParser.h
serverd/execution/login/: LoginEvent.cpp  LoginEvent.h
serverd/execution/market/: MarketContext.cpp  MarketContext.h  MarketEvent.cpp  MarketEvent.h
serverd/execution/ping/: PingEvent.cpp  PingEvent.h
serverd/ingress/: EventFactory.cpp
serverd/ipc/: IpcCommandHandler.cpp  IpcCommandHandler.h  IpcConnection.cpp  IpcConnection.h  IpcFraming.cpp  IpcFraming.h  IpcMessage.cpp  IpcMessage.h  IpcReactor.cpp  IpcReactor.h  IpcServer.cpp  IpcServer.h  IpcWorker.cpp  IpcWorker.h
serverd/protocol/tcp/: TcpFraming.cpp  TcpReactor.cpp  TcpReactor.h  TcpWorker.cpp  TcpWorker.h
serverd/protocol/tls/: TlsConnection.cpp  TlsConnection.h  TlsFraming.cpp  TlsFraming.h  TlsHandover.cpp  TlsHandover.h  TlsHandshake.cpp  TlsHandshake.h  TlsReactor.cpp  TlsReactor.h  TlsServer.cpp  TlsServer.h  TlsWorker.cpp  TlsWorker.h
serverd/protocol/udp/: UdpReactor.cpp  UdpReactor.h  UdpServer.cpp  UdpServer.h  UdpWorker.cpp  UdpWorker.h
serverd/session/: SessionManager.cpp  SessionManager.h
serverd/shard/: ShardManager.cpp  ShardManager.h  ShardWorker.cpp
serverd/simulator/: Client.cpp  TcpClient.cpp
(+179 files in other folders)
